2001-07-25  Cyrille Chepelov  <chepelov@calixo.net>

	* lib/properties.[ch]: Added (untested !) property event handler
	capability. Added a new PROP_TYPE_BUTTON, for the purpose of
	generating such events. This stuff compiles, and should lurk
	around silently as long as you don't declare property descriptors
	with events (AFAICT).
	In object_create_props_dialog() and friends:
	attached a single structure with lots of data instead of lots of
	little attachments of data to the dialog widget.
	
	* lib/object.h: fixed mild typedef breakage introduced by the above.

2001-07-17  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* lots of files: Changed Font to DiaFont
	* */Makefile.am: Added FREETYPE_LIBS
	* plug-ins/xfig/xfig-export.c: Improved (working:) color handling

2001-07-13  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "nn" to ALL_LINGUAS.
	
2001-07-09  Alex Larsson  <alexl@redhat.com>

	* app/disp_callbacks.c:
	Add gdk_im_ready() calls to XIM code.

2001-07-04  Cyrille Chepelov  <chepelov@calixo.net>

	* lib/properties.[ch]: splitted prop_get_widget() into
	prop_get_widget() (gives a widget but doesn't fill it) and 
	prop_reset_widget() (fills an existing widget with a property's value).

	* lib/widgets.[ch]: const enforcement police work.

	* shapes/network/antenna.shape: added a connection point at top,
	upon request from <Emmanuel.Quemener@cri.ens-cachan.fr>.
	
2001-06-25  Cyrille Chepelov  <chepelov@calixo.net>

	* intl/*: tested with gettext-0.10.38
	* configure.in: moved a macro call around (AM_PROG_CC) to keep
	some of autogen.sh from complaining.
	* INSTALL: added a warning against gettext older than at least 0.10.36
	
2001-06-19  Cyrille Chepelov  <chepelov@calixo.net>

	* configure.in: added explicit calls to AM_LANGINFO_CODESET and
	AM_ICONV (both provided by gettext)

2001-06-14  Cyrille Chepelov  <chepelov@calixo.net>

	* lib/charconv.c: corrected the degraded mode for when